--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -2,23 +2,34 @@
 
 body {
   font-family: 'Comfortaa', cursive;
-
   color: #000;
   line-height: 1.2;
   font-size: 17px;
 }
 
 .container {
-  width: 1400px;
+  width: 95%;
   height: 80vh;
   -webkit-box-shadow: 0px 0px 8px 0px rgba(34, 60, 80, 0.2);
   -moz-box-shadow: 0px 0px 8px 0px rgba(34, 60, 80, 0.2);
   box-shadow: 0px 0px 8px 0px rgba(34, 60, 80, 0.2);
   padding: 0 20px;
-  margin: 0 auto ;
-  margin-top: 100px;
-
+  background-color: #fff;
+  margin: 0 auto;
   border-radius: 5px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
 
-  position: relative;
+  transform: translate(-50%,-50%);
+}
+
+.todo {
+    position: relative;
+  width: 100vw;
+  height: 100vh;
+  background-image: url('../components/images/bg.jpg');
+  background-repeat: no-repeat;
+  background-position: top center;
+  background-size: cover;
 }
