--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -8,7 +8,7 @@ body {
 }
 
 .container {
-  width: 95%;
+  width: 85%;
   height: 80vh;
   -webkit-box-shadow: 0px 0px 8px 0px rgba(34, 60, 80, 0.2);
   -moz-box-shadow: 0px 0px 8px 0px rgba(34, 60, 80, 0.2);
@@ -24,7 +24,7 @@ body {
   transform: translate(-50%,-50%);
 }
 
-.todo {
+.wrapper {
     position: relative;
   width: 100vw;
   height: 100vh;
@@ -32,4 +32,10 @@ body {
   background-repeat: no-repeat;
   background-position: top center;
   background-size: cover;
+}
+
+
+.content { 
+    display: flex;
+    justify-content: space-between;
 }
