--- a/src/components/Modals/AddTodoModal/index.module.scss
+++ b/src/components/Modals/AddTodoModal/index.module.scss
@@ -3,9 +3,10 @@
   border-radius: 5px;
   width: 400px;
   height: 400px;
-  -webkit-box-shadow: 0px 0px 8px 0px rgba(34, 60, 80, 0.2);
-  -moz-box-shadow: 0px 0px 8px 0px rgba(34, 60, 80, 0.2);
-  box-shadow: 0px 0px 8px 0px rgba(34, 60, 80, 0.2);
+
+
+  background-color: #fff;
+  box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
 
   position: absolute;
   top: 50%;
