--- a/src/components/Modals/AddTodoModal/index.module.scss
+++ b/src/components/Modals/AddTodoModal/index.module.scss
@@ -4,13 +4,16 @@
   width: 400px;
   height: 400px;
 
-
   background-color: #fff;
   box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
 
   position: absolute;
+  background-image: url(../../images/modal-cat.png);
+  background-size: contain;
+  background-repeat: no-repeat;
   top: 50%;
   left: 50%;
+  z-index: 100;
   transform: translate(-50%, -50%);
 
   &Top {
@@ -18,6 +21,9 @@
     display: flex;
     justify-content: space-between;
     position: relative;
+  }
+  &Title {
+    margin-left: 80px;
   }
 
   &Form {
@@ -32,7 +38,7 @@
     grid-template-columns: 1fr 90px;
   }
 
-  &Input{
+  &Input {
     border: none;
     background-color: aliceblue;
     padding: 10px;
@@ -40,11 +46,12 @@
     border-radius: 5px 0 0 5px;
   }
 
-  &Input, &Button { 
+  &Input,
+  &Button {
     font-family: 'Comfortaa', cursive;
   }
 
-  &Button { 
+  &Button {
     outline: none;
     border: none;
     background-color: rgb(39, 128, 216);
@@ -52,19 +59,19 @@
     border-radius: 0 5px 5px 0;
 
     cursor: pointer;
-    transition: opacity .2s ease;
+    transition: opacity 0.2s ease;
 
-    &:hover { 
-        opacity: .9;
+    &:hover {
+      opacity: 0.9;
     }
   }
 
-  &Close { 
+  &Close {
     cursor: pointer;
-    transition: color .2s ease;
+    transition: color 0.2s ease;
 
-    &:hover { 
-        color: blue
+    &:hover {
+      color: blue;
     }
   }
 }
