--- a/src/components/TodoList/TaskItem/index.module.scss
+++ b/src/components/TodoList/TaskItem/index.module.scss
@@ -8,6 +8,12 @@
     background-color: #fff9de;
     border-radius: 10px;
     position: relative;
+    transition: all .2s ease;
+    cursor: pointer;
+
+    &:hover{ 
+        box-shadow: 2px 2px 8px rgba(0, 0, 0, .11);
+    }
 
 
     &Title { 
@@ -16,6 +22,42 @@
         left: 50%;
         transform: translate(-50%,-50%);
         text-align: center;
+    }
+
+
+    &Ellipsis { 
+        color: grey;
+        float: right;
+        margin: 10px 10px 0 0;
+        transition: all .2s ease;
+
+
+        &:hover { 
+            color: black;
+        }
+    }
+
+    &Buttons{ 
+        display: flex;
+        flex-direction: column;
+        gap: 4px;
+        max-width: 100px;
+        float: right;
+
+        button { 
+            background: rgb(0, 229, 255);
+            color: black;            
+            border: none;
+            padding: 5px 10px;
+            border-radius: 5px;
+            transition: background .2s ease;
+
+            &:hover{ 
+                background: rgb(88, 151, 158); 
+                color: #fff;
+            }
+
+        }
     }
 
 }
