--- a/src/components/TodoList/TaskItem/index.module.scss
+++ b/src/components/TodoList/TaskItem/index.module.scss
@@ -24,6 +24,10 @@
         text-align: center;
     }
 
+    span{
+        display: inline-block;
+        margin: 10px 10px;
+    }
 
     &Ellipsis { 
         color: grey;
