--- a/src/components/Modals/AddTodoModal/index.module.scss
+++ b/src/components/Modals/AddTodoModal/index.module.scss
@@ -8,13 +8,24 @@
   box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
 
   position: absolute;
-  background-image: url(../../images/modal-cat.png);
-  background-size: contain;
-  background-repeat: no-repeat;
+
   top: 50%;
   left: 50%;
   z-index: 100;
   transform: translate(-50%, -50%);
+
+  &Background { 
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -10;
+    opacity: .3;
+    background-image: url(../../images/modal-cat.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
 
   &Top {
     margin-top: 50px;
@@ -27,10 +38,7 @@
   }
 
   &Form {
-    // position: absolute;
-    // top: 50%;
-    // left: 50%;
-    // transform: translate(-50%, -50%);
+
     margin-top: 100px;
 
     min-width: 90%;
@@ -74,5 +82,12 @@
     &:hover {
       color: blue;
     }
+  }
+
+  .todoEllipsis{
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
   }
 }
