--- a/src/components/Modals/AddTodoModal/index.module.scss
+++ b/src/components/Modals/AddTodoModal/index.module.scss
@@ -85,9 +85,20 @@
   }
 
   .todoEllipsis{
-    margin-top: 100px;
+    margin-top: 50px;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+
+
+    &Title { 
+      margin-bottom: 20px;
+
+    }
+    &List{ 
+      display: grid;
+      grid-template-columns: repeat(2,1fr);
+      gap: 20px;
+    }
   }
 }
