--- a/src/components/Categories/index.module.scss
+++ b/src/components/Categories/index.module.scss
@@ -1,6 +1,6 @@
 .categories {
   margin-bottom: 70px;
-  width: 20%;
+  width: 15%;
   &Item {
     display: flex;
     align-items: center;
@@ -45,7 +45,7 @@
  &Cat{ 
     position: absolute;
     bottom: 0;
-    left: 0;
+    left: 0;z-index: 1000;
     width: 300px;
     height: 300px;
  }
