--- a/src/components/Categories/index.module.scss
+++ b/src/components/Categories/index.module.scss
@@ -1,6 +1,7 @@
 .categories {
   margin-bottom: 70px;
   width: 15%;
+  margin-right: 40px;
   &Item {
     display: flex;
     align-items: center;
@@ -9,13 +10,11 @@
     cursor: pointer;
     max-width: 180px;
 
-
-    &:hover { 
-        .categoriesEllipse{ 
-            opacity: 1;
-        }
+    &:hover {
+      .categoriesEllipse {
+        opacity: 1;
+      }
     }
-
   }
 
   &Ellipse {
@@ -23,8 +22,7 @@
     height: 60px;
     opacity: 0.4;
     border-radius: 50%;
-    transition: all .2s ease;
-
+    transition: all 0.2s ease;
   }
 
   .work {
@@ -42,11 +40,12 @@
     background-color: blueviolet;
   }
 
- &Cat{ 
+  &Cat {
     position: absolute;
     bottom: 0;
-    left: 0;z-index: 1000;
+    left: 0;
+    z-index: 1000;
     width: 300px;
     height: 300px;
- }
+  }
 }
