--- a/src/components/TodoList/TaskList/index.module.scss
+++ b/src/components/TodoList/TaskList/index.module.scss
@@ -3,5 +3,22 @@
        display: grid;
        grid-template-columns: repeat(4, 1fr);
        gap: 20px;
+        
+
+
+
+    @media screen and (max-width : 1900px) {
+        grid-template-columns: repeat(3, 1fr);  
     }
+
+    @media screen and (max-width : 1500px) {
+        grid-template-columns: repeat(2, 1fr);  
+    }
+
+    @media screen and (max-width : 1033px) {
+        grid-template-columns: repeat(1, 1fr);  
+    }
+    }
+
+
 }
