--- a/src/components/Categories/CategoriesModal/index.module.scss
+++ b/src/components/Categories/CategoriesModal/index.module.scss
@@ -1,49 +1,50 @@
 .Ellipsis {
-    float: right;
-    color: black;
-    min-width: 100%;
-    margin: 40px 0 0 120px;
-  
-    &Categories {
-      margin-top: 20px;
-      display: flex;
-      gap: 10px;
-      button {
-        width: 40px;
-        height: 40px;
-        border-radius: 50%;
-        border: none;
-        background: transparent;
-        cursor: pointer;
-        opacity: .3;
-           transition: opacity .2s ease;
-        &:hover{
-            opacity: 1;
-        }
-  
-        &.work {
-          background-color: aquamarine;
-        }
-  
-        &.studies {
-          background-color: rgb(26, 0, 128);
-        }
-  
-        &.shop {
-          background-color: palevioletred;
-        }
-  
-        &.sport {
-          background-color: blueviolet;
-        }
+  float: right;
+  color: black;
+  min-width: 100%;
+  margin: 40px 0 0 120px;
+
+  &.EllipsisActive {
+    opacity: 1;
+  }
+
+  &Categories {
+    margin-top: 20px;
+    display: flex;
+    gap: 10px;
+    button {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      border: none;
+      background: transparent;
+      cursor: pointer;
+      opacity: 0.3;
+      transition: opacity 0.2s ease;
+      &:hover {
+        opacity: 1;
       }
-      
+
+      &.work {
+        background-color: aquamarine;
+      }
+
+      &.studies {
+        background-color: rgb(26, 0, 128);
+      }
+
+      &.shop {
+        background-color: palevioletred;
+      }
+
+      &.sport {
+        background-color: blueviolet;
+      }
     }
-
-
-  
   }
+}
 
-  .active { 
-    background-color: green;
-  }
+
+.active { 
+  opacity: 1;
+}
