цвет фона карточки в зависимости от выбранной кат.

--- a/src/components/Categories/CategoriesModal/index.module.scss
+++ b/src/components/Categories/CategoriesModal/index.module.scss
@@ -30,15 +30,15 @@
       }
 
       &.studies {
-        background-color: rgb(26, 0, 128);
+        background-color: #1a0080;
       }
 
       &.shop {
-        background-color: palevioletred;
+        background-color: #d87093;
       }
 
       &.sport {
-        background-color: blueviolet;
+        background-color: #8a2be3;
       }
     }
   }
