--- a/src/components/TodoList/TaskItem/index.module.scss
+++ b/src/components/TodoList/TaskItem/index.module.scss
@@ -5,7 +5,7 @@
 .todo{ 
     width: 300px;
     height: 150px;
-    background-color: #fff9de;
+    // background-color: #fff9de;
     border-radius: 10px;
     position: relative;
     transition: all .2s ease;
