--- a/src/components/Categories/CategoriesModal/index.module.scss
+++ b/src/components/Categories/CategoriesModal/index.module.scss
@@ -1,7 +1,7 @@
 .Ellipsis {
   float: right;
   color: black;
-  min-width: 100%;
+  width: 100%;
   margin: 40px 0 0 120px;
 
   &.EllipsisActive {
@@ -42,9 +42,4 @@
       }
     }
   }
-}
-
-
-.active { 
-  opacity: 1;
 }
