--- a/src/App/index.module.scss
+++ b/src/App/index.module.scss
@@ -30,4 +30,8 @@
   .content { 
       display: flex;
     //   justify-content: space-between;
+
+    @media screen and (max-width: 550px) {
+        // flex-direction: column;
+    }
   }
