--- a/src/components/TodoList/TaskList/index.module.scss
+++ b/src/components/TodoList/TaskList/index.module.scss
@@ -28,5 +28,10 @@
         grid-template-columns: repeat(1, 1fr); 
       
     }
+
+    @media screen and (max-width : 500px) {
+        max-height: 390px;
+      
+    }
     }
 }
